--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="load">Load</string>
     <string name="welcome_label">Welcome</string>
     <string name="sign_out_label">Sign out</string>
+    <string name="failed">Failed</string>
 </resources>
